# esp32-envsensor-mqtt

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT_NOTICE  LICENSE  README.md  sdkconfig  sdkconfig.old
components/aht20/: CMakeLists.txt  aht20.c  aht20.h
components/bch/: bch.c  bch.h
components/bme280/: CMakeLists.txt  bme280.c  bme280.h
components/envsensor_proto/: CMakeLists.txt  envsensor.pb.c  envsensor.pb.h
components/esp_temp/: CMakeLists.txt  esp_temp.c  esp_temp.h
components/i2c/: CMakeLists.txt  i2c.c  i2c.h
components/mqtt_push/: CMakeLists.txt  mqtt_push.c  mqtt_push.h
components/nanopb/: CMakeLists.txt
components/protocol/: protocol.c  protocol.h
components/sht41/: CMakeLists.txt  sht41.c  sht41.h
components/sht4x/: CMakeLists.txt  sht4x.c  sht4x.h
components/tmp117/: CMakeLists.txt  tmp117.c  tmp117.h
components/wifi_sta/: CMakeLists.txt  wifi_sta.c  wifi_sta.h
main/: CMakeLists.txt  main.c  main.h  sensors_enable.h.in
